--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>My First Assignment</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -31,13 +33,15 @@
                     <div><button id="early"><img src="Group 5.png" alt="">Early Access Now Open</button></div>
                     <div id="heading">
                         <h1><span id="wh">Structured Thinking,</span><br>
-                            <span id="gr">Not Just Note-Taking.</span></h1>
+                            <span id="gr">Not Just Note-Taking.</span>
+                        </h1>
                     </div>
                     <div>
                         <p>A private space to store notes, links, and learning summaries — designed to <br>
                             help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                     </div>
-                    <div id="btn-cont"><button id="first">Start Building Your Volt<img src="/assets/ArrowRight.png" alt=""></button>
+                    <div id="btn-cont"><button id="first">Start Building Your Volt<img src="/assets/ArrowRight.png"
+                                alt=""></button>
                         <button id="second"><img src="/assets/Play.png" alt="">See How It Works</button>
                     </div>
                 </div>
@@ -45,6 +49,19 @@
             </div>
         </section>
     </header>
+    <main>
+        <section id="heading">
+            <h2>Notes Don't Fail,Structure Does</h2><br>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+
+        </section>
+        <section id="cards-cont">
+            <div><img src="/assets/Vector.png" alt="">Scattered notes <br></div>
+            <div><img src="/assets/Bookmarks.png" alt="">/div>
+            <div><img src="/assets/Brain.png" alt=""></div>
+            <div><img src="/assets/Info.png" alt=""></div>
+        </section>
+    </main>
 
 </body>
 
