added main section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <div><img src="/assets/logo-navbar.png" alt=""></div>
+            <div><img src="logo-navbar.png" alt=""></div>
             <div>
                 <ul id="menu">
                     <li><a href="">Features</a></li>
@@ -40,26 +40,38 @@
                         <p>A private space to store notes, links, and learning summaries — designed to <br>
                             help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                     </div>
-                    <div id="btn-cont"><button id="first">Start Building Your Volt<img src="/assets/ArrowRight.png"
+                    <div id="btn-cont"><button id="first">Start Building Your Volt<img src="ArrowRight.png"
                                 alt=""></button>
-                        <button id="second"><img src="/assets/Play.png" alt="">See How It Works</button>
+                        <button id="second"><img src="Play.png" alt="">See How It Works</button>
                     </div>
                 </div>
 
             </div>
         </section>
     </header>
-    <main>
+    <main id="main">
         <section id="heading">
-            <h2>Notes Don't Fail,Structure Does</h2><br>
+            <h2>Notes Don't Fail, Structure Does.</h2>
             <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
 
         </section>
         <section id="cards-cont">
-            <div><img src="/assets/Vector.png" alt="">Scattered notes <br></div>
-            <div><img src="/assets/Bookmarks.png" alt="">/div>
-            <div><img src="/assets/Brain.png" alt=""></div>
-            <div><img src="/assets/Info.png" alt=""></div>
+            <div class="card"><img src="Vector.png" alt="">
+                <h3>Scatterred Notes</h3>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card"><img src="Bookmarks.png" alt="">
+                <h3>Bookmark overload</h3>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="card"><img src="Brain.png" alt="">
+                <h3>No idea connections</h3>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="card"><img src="Info.png" alt="">
+                <h3>Forgetting what you learned</h3>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
         </section>
     </main>
 
