adding knowledge section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,26 @@
             </div>
         </section>
     </main>
+    <section id="knowledge">
+        <div id="knowledge-cont">
+            <div><img src="knowledge.png" alt=""></div>
+            <div id="solution">
+                <h4>THE SOLUTION</h4>
+                <h1>Your second brain,<br>
+                    structured by design.</h1>
+                <p><span>Personal Knowledge Vault isn't another note-taking app. <br>It's a thinking environment where
+                        every
+                        note, link, and summary <br>becomes part of an interconnected web of understanding.</span></p>
+                <div id="checkbox">
+                    <p><img src="CheckCircle.png" alt="">Capture ideas with structure built-in from day one</p>
+                    <p><img src="CheckCircle.png" alt="">Connect related concepts automatically as you write</p>
+                    <p><img src="CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</p>
+                    <p><img src="CheckCircle.png" alt="">Find anything instantly with semantic search</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 </body>
 
