adding footer and another section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,35 @@
             </div>
         </div>
     </section>
+    <section id="conclusion">
+        <div id="container">
+
+            <h2>Ready to think more clearly?</h2>
+            <span>
+                <p>Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no
+                    credit
+                    card required.</p>
+            </span>
+
+
+            <button>Get Early Access <img src="ArrowRight.png" alt=""></button>
+            <p id="p">Free during early access • No credit card needed</p>
+
+        </div>
+    </section>
+
+    <footer>
+        <div id="footer-cont">
+            <div>
+                <img src="logo-footer.png" alt="">
+            </div>
+            <div id="link">
+                <p>Social Links</p><img src="x.png" alt=""><img src="insta.png" alt=""><img src="facebook.png" alt="">
+            </div>
+        </div>
+        <div id="copy"><p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p></div>
+
+    </footer>
 
 </body>
 
