fixxing some errors

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                     <li><a href="">Why It's Different</a></li>
                 </ul>
             </div>
-            <div><button class="btn">Get Early Access</button></div>
+            <div><button id="btn" class="hover">Get Early Access</button></div>
         </nav>
         <section id="banner">
             <div>
                 <div id="content">
-                    <div><button id="early"><img src="Group 5.png" alt="">Early Access Now Open</button></div>
+                    <div><button id="early" ><img src="Group 5.png" alt="">Early Access Now Open</button></div>
                     <div id="heading">
                         <h1><span id="wh">Structured Thinking,</span><br>
                             <span id="gr">Not Just Note-Taking.</span>
@@ -40,9 +40,9 @@
                         <p>A private space to store notes, links, and learning summaries — designed to <br>
                             help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                     </div>
-                    <div id="btn-cont"><button id="first">Start Building Your Volt<img src="ArrowRight.png"
+                    <div id="btn-cont"><button id="first" class="hover">Start Building Your Volt<img src="ArrowRight.png"
                                 alt=""></button>
-                        <button id="second"><img src="Play.png" alt="">See How It Works</button>
+                        <button id="second" class="hover"><img src="Play.png" alt="">See How It Works</button>
                     </div>
                 </div>
 
@@ -105,7 +105,7 @@
             </span>
 
 
-            <button>Get Early Access <img src="ArrowRight.png" alt=""></button>
+            <button class="hover">Get Early Access <img src="ArrowRight.png" alt=""></button>
             <p id="p">Free during early access • No credit card needed</p>
 
         </div>
